--- a/README.adoc
+++ b/README.adoc
@@ -18,9 +18,9 @@ image:resources/Shell.png[Overview]
 
 === ターミナルエミュレータ（クライアント環境）===
 
-`SISH`はxterm系の制御シーケンスが理解できるターミナルエミュレータから接続して使用される必要があります。 +
+`SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータから接続して使用される必要があります。 +
 Windowsのコマンドプロンプトでは非対応となります。 +
-デフォルトの設定では`Ctrl` `Shift` `Alt`などの装飾キーの多重押しに対応するためにlink:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の`modifyCursorKeys=2`,`modifyOtherKeys=2`のシーケンスが飛んで来ることが想定されています。
+デフォルトの設定では `Ctrl` `Shift` `Alt` などの装飾キーの多重押しに対応するためにlink:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の`modifyCursorKeys=2`,`modifyOtherKeys=2`のシーケンスが飛んで来ることが想定されています。
 
 動作確認環境として以下サイトで配布されているGDI版puttyで正しく動作する事を確認しています。
 
@@ -102,9 +102,11 @@ http://ethanschoonover.com/solarized
 
 `.E [File] [Item] [FieldId...]`
 
-> `[Item]`は選択リスト時に省略可能です。  
-> `[FieldId]`を指定すると指定フィールドを辞書に基づいて編集するモードで起動します。行数表示横にフィールド名が表示されます。
-> Conversion指定があれば保存時に自動的に変換されます。マルチバリューの場合はマルチバリュー編集モードになります。
+____
+ [Item] は選択リスト時に省略可能です。  
+ [FieldId] を指定すると指定フィールドを辞書に基づいて編集するモードで起動します。行数表示横にフィールド名が表示されます。
+ Conversion指定があれば保存時に自動的に変換されます。マルチバリューの場合はマルチバリュー編集モードになります。
+____
 
 デフォルトのキー操作はWindowsの一般的なテキストエディタと同様です。
 
