--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ image:resources/Shell.png[Overview]
 
 `SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータから接続して使用される必要があります。 +
 Windowsのコマンドプロンプトでは非対応となります。 +
-デフォルトの設定では `Ctrl` `Shift` `Alt` などの装飾キーの多重押しに対応するためにlink:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の`modifyCursorKeys=2`,`modifyOtherKeys=2`のシーケンスが飛んで来ることが想定されています。
+デフォルトの設定では `Ctrl` `Shift` `Alt` などの装飾キーの多重押しに対応するためにlink:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の `modifyCursorKeys=2` , `modifyOtherKeys=2` のシーケンスが飛んで来ることが想定されています。
 
 動作確認環境として以下サイトで配布されているGDI版puttyで正しく動作する事を確認しています。
 
@@ -34,26 +34,26 @@ putty.iniにxtermキーシーケンスの設定を追記します。 +
 
 * Gnome-terminal(Linux)
 * iTurm2(Mac)
-** プロファイル設定のKeysのプリセットを`xterm Defaults`に変更
-** プロファイル設定のColorsのプリセットを`Solarized light`に変更
+** プロファイル設定のKeysのプリセットを `xterm Defaults` に変更
+** プロファイル設定のColorsのプリセットを `Solarized light` に変更
 
 これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]のキーシーケンスの設定とカラーパレット設定を端末側とうまく合わせる事により対応させる事ができます。
 
 === SISHのコンパイルとグローバルカタログ化 ===
 
-同梱のソース`SISH` `SISH.SETTING.H`を`BP`ディレクトリに置きます。   
-`BP`ディレクトリのファイルエンコーディングは`UTF8`に設定して置く必要があります。
+同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。   
+`BP` ディレクトリのファイルエンコーディングは `UTF8` に設定して置く必要があります。
 
-以下のコマンドでどのアカウントからも`*SISH`というコマンドで起動できます。
+以下のコマンドでどのアカウントからも `*SISH` というコマンドで起動できます。
 
     >BASIC BP SISH
     >CATALOG BP *SISH SISH
 
-`SISH.SETTING.H`を独自にカスタマイズした場合は他の人とバッティングしないために自分用の名前でカタログ化して下さい。
+`SISH.SETTING.H` を独自にカスタマイズした場合は他の人とバッティングしないために自分用の名前でカタログ化して下さい。
 
 === Linuxに接続時の注意点 ===
 
-SISHでは`Ctrl`+`Z`と`Ctrl`+`S`をショートカットキーとして使用します。
+SISHでは `Ctrl` + `Z` と `Ctrl` + `S` をショートカットキーとして使用します。
 
 Linuxでは以下の制御コードと重複しているので抑制する必要があります。
 
@@ -64,24 +64,24 @@ Linuxでは以下の制御コードと重複しているので抑制する必要
 
 ==== コマンドライン入力時の単語補完入力機能 ====
 
-単語入力途中に`Tab`で下記の単語を補完、もう一度`Tab`で候補リストを表示します。
+単語入力途中に `Tab` で下記の単語を補完、もう一度 `Tab` で候補リストを表示します。
 
-- VOC内の `Verb`,`File`,`PAragraph`,`Keyword`など
+- VOC内の `Verb` , `File` , `PAragraph` , `Keyword` など
 - ファイル名が存在する場合にその辞書ファイルのフィールド
 - フラットファイルの単語の次の単語の場合に限り、対象フラットファイルのレコードID
-- `,`後のマルチパートファイル
-- `LOGTO`コマンドの後は登録アカウントテーブルの内容から補完
-- `%`後のL-Typeフィールドの辞書フィールド補完に対応(OpenQM)
+- `,` 後のマルチパートファイル
+- `LOGTO` コマンドの後は登録アカウントテーブルの内容から補完
+- `%` 後のL-Typeフィールドの辞書フィールド補完に対応(OpenQM)
 
 OpenQMでは'OPTION QUERY.NO.CASE'を設定しておく事で大文字小文字に関係なく補完する事ができます。
 
 ==== 英小文字大文字反転入力の切替機能 ====
 
-`Insert`キーでON/OFFを切り替えます
+`Insert` キーでON/OFFを切り替えます
 
 ==== カラーテーマの切替機能 ====
 
-`F11`キーでカラーテーマを切り替える事ができます。(OSCによるカラーパレット変更に対応している端末のみ)  
+`F11` キーでカラーテーマを切り替える事ができます。(OSCによるカラーパレット変更に対応している端末のみ)  
 パレットは以下のサイトのSolarized-lightとdarkが利用できます。  
 http://ethanschoonover.com/solarized
 
@@ -89,12 +89,12 @@ http://ethanschoonover.com/solarized
 
 ターミナルクライアントのサイズを取得してサイズが違っていた場合に`TERM`コマンドで自動的にサイズ調整を行います。 + 
 デフォルトでは自動変更モードになっています。 +
-`TERM`コマンドでターミナルサイズを設定した場合は自動変更モードは解除されます。
-自動変更モードに戻す際は、`TERM AUTO`コマンドを実行します。
+`TERM` コマンドでターミナルサイズを設定した場合は自動変更モードは解除されます。
+自動変更モードに戻す際は、 `TERM AUTO` コマンドを実行します。
 
 ==== コマンド実行時間計測機能 ====
 
-`.T`コマンドで時間計測機能をON/OFF
+`.T` コマンドで時間計測機能をON/OFF
 
 ==== スクリーンエディタ ====
 
@@ -112,19 +112,19 @@ ____
 
 メモリが許す限り無制限にUndo/Redoできます。コマンドライン内でも同様に動作します。
 
-マウスは使用することが出来ませんが、`Ctrl`を押しながらのキー移動や高機能なジャンプ機能によりキーボードによる効率的なカーソル移動が可能となっています。
+マウスは使用することが出来ませんが、`Ctrl` を押しながらのキー移動や高機能なジャンプ機能によりキーボードによる効率的なカーソル移動が可能となっています。
 
-マルチバッファ機能にて同時に複数のItemを編集できます。`Ctrl`+`B`でバッファ一覧ポップアップが開きますので切り替えたいアイテムを選択してください。 
+マルチバッファ機能にて同時に複数のItemを編集できます。 `Ctrl` + `B` でバッファ一覧ポップアップが開きますので切り替えたいアイテムを選択してください。 
 
 バッファは明示的に閉じるまでセッションメモリ（COMMON）に格納され続けます。
 
-`ESC`キーで画面の下部にメニューが表示されます。メニューの内のテキストで大文字で表示されているキーを押すとそのメニューを選択できます。
+`ESC` キーで画面の下部にメニューが表示されます。メニューの内のテキストで大文字で表示されているキーを押すとそのメニューを選択できます。
 
-`Ctrl`+`O`でラベル一覧ポップアップが表示されます。ラベルは実行コードには入らないのでGoToなどで使用しなくてもソースコード上に書いておけば簡単に目的の場所にジャンプすることができます。
+`Ctrl` + `O` でラベル一覧ポップアップが表示されます。ラベルは実行コードには入らないのでGoToなどで使用しなくてもソースコード上に書いておけば簡単に目的の場所にジャンプすることができます。
 
 BASICプログラムは構文が装飾されて表示されます。分岐やループで自動的にインデントが増えます。
 
-※エディタ使用中にターミナルエミュレータのサイズを小さくした場合は、表示が崩れますのでその時は一度エディタを抜けてから戻ってきて下さい。`Ctrl+E` `Ctrl+E`
+※エディタ使用中にターミナルエミュレータのサイズを小さくした場合は、表示が崩れますのでその時は一度エディタを抜けてから戻ってきて下さい。 `Ctrl+E` `Ctrl+E`
 
 == キー別機能一覧 ==
 
@@ -139,28 +139,28 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 | `←` | 左移動
 | `↑` | 上移動
 | `↓` | 下移動
-| `Ctrl`+`→` |  次の単語に移動 +
+| `Ctrl` + `→` |  次の単語に移動 +
 カーソルが対応する括弧上にある場合は対応する括弧まで移動
-| `Ctrl`+`←` |  前の単語に移動 +
+| `Ctrl` + `←` |  前の単語に移動 +
 カーソルが対応する括弧上にある場合は対応する括弧まで移動
-| `Ctrl`+`↑` |  3行前に移動（先が非表示文字の場合は表示文字）
-| `Ctrl`+`↓` |  3行先に移動（先が非表示文字の場合は表示文字）
+| `Ctrl` + `↑` |  3行前に移動（先が非表示文字の場合は表示文字）
+| `Ctrl` + `↓` |  3行先に移動（先が非表示文字の場合は表示文字）
 | `HOME` |  論理行頭/物理行頭へ移動
 | `END` |  行末へ移動
-| `Ctrl`+`HOME` |  データの先頭へ移動
-| `Ctrl`+`END` |  データの末尾へ移動
+| `Ctrl` + `HOME` |  データの先頭へ移動
+| `Ctrl` + `END` |  データの末尾へ移動
 | `PgUp` |  半ページ戻る
 | `PgDn` |  半ページ進む
-| `Ctrl`+`PgUp` |  前のページ戻る
-| `Ctrl`+`PgDn` |  次のページ進む
-| `Ctrl`+`.` |  続けて入力した1文字が次に出現する位置に移動 +
+| `Ctrl` + `PgUp` |  前のページ戻る
+| `Ctrl` + `PgDn` |  次のページ進む
+| `Ctrl` + `.` |  続けて入力した1文字が次に出現する位置に移動 +
 連続で同じ文字を入力するとさらに次に出現する位置に移動
-| `Ctrl`+`,` |  続けて入力した1文字が遡って次に出現する位置に移動 +
+| `Ctrl` + `,` |  続けて入力した1文字が遡って次に出現する位置に移動 +
 連続で同じ文字を入力するとさらに次に出現する位置に移動
 |===
 
 
-※上記にさらに`Shift`同時押しで範囲選択します
+※上記にさらに `Shift` 同時押しで範囲選択します
 
 カーソル移動早見表
 
@@ -192,14 +192,14 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`Ctrl`+`Z` | 直前の編集操作を戻す(アンドゥ)
-|`Ctrl`+`Y` | 直前の編集操作を戻す(リドゥ)
-|`Ctrl`+`X` | カット
-|`Ctrl`+`C` | コピー
-|`Ctrl`+`V` | クライアント端末のクリップボードから貼り付け
-|`Alt`+`V` | サーバローカルのクリップボードから貼り付け
-| `Ctrl`+`A` |  選択領域の拡張（押すたびに以下を繰り返します） +
-`選択なし`->`単語選択`->`空白文字まで選択`->`1行選択`->`同一インデント行を選択`->`全行選択`->`選択なし`
+| `Ctrl` + `Z` | 直前の編集操作を戻す(アンドゥ)
+| `Ctrl` + `Y` | 直前の編集操作を戻す(リドゥ)
+| `Ctrl` + `X` | カット
+| `Ctrl` + `C` | コピー
+| `Ctrl` + `V` | クライアント端末のクリップボードから貼り付け
+| `Alt` + `V` | サーバローカルのクリップボードから貼り付け
+| `Ctrl` + `A` |  選択領域の拡張（押すたびに以下を繰り返します） +
+`選択なし` -> `単語選択` -> `空白文字まで選択` -> `1行選択` -> `同一インデント行を選択` -> `全行選択` -> `選択なし`
 |===
 
 ==== その他操作 ====
@@ -207,8 +207,8 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`F11` | テーマ切り替え
-|`F1` | カーソル上の単語をヘルプ表示
+| `F11` | テーマ切り替え
+| `F1` | カーソル上の単語をヘルプ表示
 |===
 
 === シェルのみ ===
@@ -216,28 +216,28 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`↑` | コマンド履歴戻る
-|`↓` | コマンド履歴進む
-|`Ctrl`+`R` | コマンド履歴を古い方にインクリメンタルサーチ
-|`Ctrl`+`S` | コマンド履歴を新しい方にインクリメンタルサーチ
-|`Insert` | 大文字/小文字　反転入力の切り替え
-|`TAB` | 1回押下で共通部分の文字補完、２回押下で補完候補をリスト表示
-|`PgUp` | 補完候補リストのページ戻り
-|`PgDn` | 補完候補リストのページ送り
-|`Ctrl`+`T` | 直前のコマンドのファイル名を挿入
-|`Ctrl`+`E` | エディタ画面に遷移
+| `↑` | コマンド履歴戻る
+| `↓` | コマンド履歴進む
+| `Ctrl` + `R` | コマンド履歴を古い方にインクリメンタルサーチ
+| `Ctrl` + `S` | コマンド履歴を新しい方にインクリメンタルサーチ
+| `Insert` | 大文字/小文字　反転入力の切り替え
+| `TAB` | 1回押下で共通部分の文字補完、２回押下で補完候補をリスト表示
+| `PgUp` | 補完候補リストのページ戻り
+| `PgDn` | 補完候補リストのページ送り
+| `Ctrl` + `T` | 直前のコマンドのファイル名を挿入
+| `Ctrl` + `E` | エディタ画面に遷移
 |===
 
 === エディタのみ ===
 
-`CHAR(27)`=(`ESC` or `Ctrl`+`[` or `Ctrl`+`3`) or `F10`でメニューを表示
+`CHAR(27)`=(`ESC` or `Ctrl` + `[` or `Ctrl` + `3`) or `F10`でメニューを表示
 
 ==== カーソル操作 ====
 
 |===
 | キー| 機能
 
-|`Ctrl+N`|カーソル行が画面の中央になるようにスクロールします|
+| `Ctrl` + `N` |カーソル行が画面の中央になるようにスクロールします|
 |===
 
 ==== 編集 ====
@@ -245,12 +245,12 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`TAB` | 選択領域のインデントを増やす
-|`Shift`+`TAB` | 選択領域のインデントを減らす
-|`Ctrl`+`5` | @VMの挿入
-|`Ctrl`+`4` | @SVMの挿入
-|`Ctrl`+`Del` | 行削除
-|`Ctrl`+`!` | 選択領域のコメント化/コメント化解除
+| `TAB` | 選択領域のインデントを増やす
+| `Shift` + `TAB` | 選択領域のインデントを減らす
+| `Ctrl` + `5` | @VMの挿入
+| `Ctrl` + `4` | @SVMの挿入
+| `Ctrl` + `Del` | 行削除
+| `Ctrl` + `!` | 選択領域のコメント化/コメント化解除
 |===
 
 ==== ジャンプ ====
@@ -258,16 +258,16 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`Ctrl`+`F` | 単語検索
-|`F3` | 直前の単語検索をもう一度実行
-|`Ctrl`+`F3` | 直前の単語検索を逆戻りで実行
-|`Ctrl`+`R` | 単語置換
-|`Ctrl`+`L` | 行番号指定ジャンプ
-|`Ctrl`+`G` or `F12` | 定義元へジャンプ
-|`Ctrl`+`O` | アウトライン(ラベル一覧)ポップアップ表示
-|`Ctrl`+`B` | バッファ一覧ポップアップ表示
-|`Alt`+`→` | ジャンプ履歴進む
-|`Alt`+`←` | ジャンプ履歴戻る
+| `Ctrl` + `F` | 単語検索
+| `F3` | 直前の単語検索をもう一度実行
+| `Ctrl` + `F3` | 直前の単語検索を逆戻りで実行
+| `Ctrl` + `R` | 単語置換
+| `Ctrl` + `L` | 行番号指定ジャンプ
+| `Ctrl` + `G` or `F12` | 定義元へジャンプ
+| `Ctrl` + `O` | アウトライン(ラベル一覧)ポップアップ表示
+| `Ctrl` + `B` | バッファ一覧ポップアップ表示
+| `Alt` + `→` | ジャンプ履歴進む
+| `Alt` + `←` | ジャンプ履歴戻る
 |===
 
 ==== ファイル ====
@@ -275,11 +275,11 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 |===
 | キー| 機能
 
-|`Ctrl+S` | 上書き保存
-|`F5` | リロード
-|`Ctrl`+`F4` | Bufferを閉じる
-|`F7` | コンパイル
-|`F4` | 下位レベルにDive(カーソル行の内容を下位の区切りレベルの編集モードとして新しいバッファに開きます) +
+| `Ctrl+S` | 上書き保存
+| `F5` | リロード
+| `Ctrl` + `F4` | Bufferを閉じる
+| `F7` | コンパイル
+| `F4` | 下位レベルにDive(カーソル行の内容を下位の区切りレベルの編集モードとして新しいバッファに開きます) +
 バリュー区切りが改行になるので簡単に編集できます。
 |===
 
