--- a/README.adoc
+++ b/README.adoc
@@ -100,13 +100,15 @@ http://ethanschoonover.com/solarized
 
 シェルにて以下のコマンドにて起動します。
 
-`.E [File] [Item] [FieldId...]`
+`.E [<File> [<Item> <FieldId...>]]`
 
-____
- [Item] は選択リスト時に省略可能です。  
- [FieldId] を指定すると指定フィールドを辞書に基づいて編集するモードで起動します。行数表示横にフィールド名が表示されます。
- Conversion指定があれば保存時に自動的に変換されます。マルチバリューの場合はマルチバリュー編集モードになります。
-____
+****
+[horizontal]
+<File>:: 開く対象のFileId。省略した場合は新規バッファを開きます。
+<Item>:: 開く対象のItemId。選択リスト時がある場合は省略可能。  
+<FieldId>:: 指定フィールドを辞書に基づいて編集するモードで起動します。行数表示横にフィールド名が表示されます。 +
+Conversion指定があれば保存時に自動的に変換されます。マルチバリューの場合はマルチバリュー編集モードになります。
+****
 
 デフォルトのキー操作はWindowsの一般的なテキストエディタと同様です。
 
