--- a/README.adoc
+++ b/README.adoc
@@ -4,23 +4,48 @@ Unix like Shell for OpenQM and UniVerse
 
 == 概要 ==
 
-Unix系のShellライクな操作でコマンド入力が出来るようになります。 
+Unix系のShellライクな操作でコマンドライン入力が出来るようになります。 
 また、アイテムやBASICソースを効率よく編集するスクリーンエディタも備えています。
 
 image:resources/Shell.png[Overview]
 
-== コンパイル確認プラットフォーム ==
+== 特徴 ==
 
-* OpenQM 3.4-6 or later
-* UniVerse 11.2 or later
+.コマンドライン
+* VOCに登録されている単語の入力補完機能によりコマンドの入力ミスが減ります。
+* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。
+* ターミナルサイズをウィンドウの大きさに自動的に合わせます。
+* 大文字小文字反転入力のON/OFFを　`F9` で簡単に切り替えれます。
+* 実行時間計測モード
+
+.エディタ
+* BASICソースもデータレコードも同じ操作感で編集できます。
+* BASICソースの構文ハイライト表示により入力ミスが軽減されます。
+* カーソル移動の効率を高めるジャンプ機能 
+** アウトライン一覧を表示して指定ラベルにジャンプ
+** 変数宣言元にジャンプ
+** ジャンプ前のカーソル位置に戻る
+* マルチバリューを改行区切りで編集出来ます。
+* バッファ機能により複数ファイルの編集状態を維持できます。
+
+.その他
+コマンドラインとエディタ共にカーソル移動やコピー＆ペーストはWindowsのキーバインドで操作できます。
+（設定ファイルにより自分好みにキーバインドに変更可能）
+
+== 対象プラットフォーム ==
+
+* OpenQM 3.4系 or later (3.4-7で動作確認)
+* UniVerse 11.2系 or later (11.2.1でコンパイル確認)
 
 == セットアップ ==
 
-=== ターミナルエミュレータ（クライアント環境）===
+=== ターミナルエミュレータ（クライアント環境） ===
 
 `SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータから接続して使用される必要があります。 +
-Windowsのコマンドプロンプトでは非対応となります。 +
-デフォルトの設定では `Ctrl` `Shift` `Alt` などの装飾キーの多重押しに対応するためにlink:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の `modifyCursorKeys=2` , `modifyOtherKeys=2` のシーケンスが飛んで来ることが想定されています。
+Windowsのコマンドプロンプトでは動作しません。 +
+デフォルトの設定では `Ctrl` `Shift` `Alt` などの装飾キーの多重押しに対応するために
+link:http://invisible-island.net/xterm/ctlseqs/ctlseqs.html[xterm制御シーケンス]の `modifyCursorKeys=2` , `modifyOtherKeys=2` の
+シーケンスが送信されることが想定されています。
 
 動作確認環境として以下サイトで配布されているGDI版puttyで正しく動作する事を確認しています。
 
@@ -32,30 +57,33 @@ putty.iniにxtermキーシーケンスの設定を追記します。 +
 
 また、他にも以下の端末で最低限の動作を確認しています。
 
-* Gnome-terminal(Linux)
-* iTurm2(Mac)
-** プロファイル設定のKeysのプリセットを `xterm Defaults` に変更
-** プロファイル設定のColorsのプリセットを `Solarized light` に変更
+- Gnome-terminal(Linux)
+- iTurm2(Mac)
+  * プロファイル設定のKeysのプリセットを `xterm Defaults` に変更
+  * プロファイル設定のColorsのプリセットを `Solarized light` に変更
 
-これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]のキーシーケンスの設定とカラーパレット設定を端末側とうまく合わせる事により対応させる事ができます。
+これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]の
+キーシーケンスの設定とカラーパレット設定を端末側とうまく合わせる事により対応させる事ができます。
 
 === SISHのコンパイルとグローバルカタログ化 ===
 
 同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。   
 `BP` ディレクトリのファイルエンコーディングは `UTF8` に設定して置く必要があります。
 
-以下のコマンドでどのアカウントからも `*SISH` というコマンドで起動できます。
+以下のコマンドでどのアカウントからも `SISH` というコマンドで起動できます。
 
     >BASIC BP SISH
-    >CATALOG BP *SISH SISH
+    >CATALOG BP SISH SISH
 
-`SISH.SETTING.H` を独自にカスタマイズした場合は他の人とバッティングしないために自分用の名前でカタログ化して下さい。
+`SISH.SETTING.H` を独自にカスタマイズした場合は別名でカタログ化するなど他の人とバッティング
+しないように適宜調節して下さい。
 
 === Linuxに接続時の注意点 ===
 
 SISHでは `Ctrl` + `Z` と `Ctrl` + `S` をショートカットキーとして使用します。
 
-Linuxでは以下の制御コードと重複しているので抑制する必要があります。
+Linuxでは以下のターミナル制御コードと重複しているのでそれらの機能を利用する場合は、 `SISH.SETTING.H` で
+キーバインドを変更するか、以下の方法で抑制する必要があります。
 
     stty stop undef
     stty susp ^K
@@ -72,17 +100,29 @@ Linuxでは以下の制御コードと重複しているので抑制する必要
 - `,` 後のマルチパートファイル
 - `LOGTO` コマンドの後は登録アカウントテーブルの内容から補完
 - `%` 後のL-Typeフィールドの辞書フィールド補完に対応(OpenQM)
+- `server:account:file` 等の拡張ファイル表記(OpenQM)
+- 単語に `/` or `\` を含むか　`PATH:` で始まる場合にOSパスの補完(OpenQM)
 
-OpenQMでは `OPTION QUERY.NO.CASE` を設定しておく事で大文字小文字に関係なく補完する事ができます。
+補完対象の単語は大文字小文字の区別なく検索されます。 +
+候補リスト表示中は、 `TAB` を押さなくても自動的に補完されます。 +
+`F3` でさらに部分一致とパターンによるフィルターをかける事ができます。 +
+`ESC` で候補リスト表示を抜けます。
+
+==== コマンド履歴の保存機能 ====
+
+アカウント内に `./stacks` フォルダを作成しておくことでコマンド実行履歴が +
+`ログインユーザ名$プログラム名` の形式で保存されます。 +
+SISHシェル起動時や `LOGTO` によるアカウント移動時にそのコマンド実行履歴が存在すると +
+そこからコマンド履歴を構築しますので以前に入力した内容が復元されます。
 
 ==== 英小文字大文字反転入力の切替機能 ====
 
-`Insert` キーでON/OFFを切り替えます
+`F9` キーでON/OFFを切り替えます
 
 ==== カラーテーマの切替機能 ====
 
-`F11` キーでカラーテーマを切り替える事ができます。(OSCによるカラーパレット変更に対応している端末のみ)  
-パレットは以下のサイトのSolarized-lightとdarkが利用できます。  
+`F11` キーでカラーテーマを切り替える事ができます。(OSCによるカラーパレット変更に対応している端末のみ) +  
+パレットは以下のサイトのSolarized-lightとdarkが利用できます。  +
 http://ethanschoonover.com/solarized
 
 ==== ターミナルサイズの自動変更機能 ====
@@ -92,15 +132,53 @@ http://ethanschoonover.com/solarized
 `TERM` コマンドでターミナルサイズを設定した場合は自動変更モードは解除されます。
 自動変更モードに戻す際は、 `TERM AUTO` コマンドを実行します。
 
-==== コマンド実行時間計測機能 ====
+==== クリップボード ====
 
-`.T` コマンドで時間計測機能をON/OFF
+ローカル端末とクリップボードの共有が出来ます。ターミナル端末が対応している必要があります。
+
+==== SISH特殊コマンド一覧 ====
+
+以下のコマンドはVerbとして登録されていませんがSISH内でのみ利用できます。
+
+[cols="1,3"]
+|===
+| キー| 機能
+
+|**.A**__n__ text | _n_ 行目のコマンド履歴の末尾に _text_ を追加。 _n_ は省略すると `1` として扱う。
+|**.C**__n__ /__old__/__new__/**G** | _n_ 行目のコマンド履歴の _old_ 文字列を _new_ 文字列に置換。
+*G*は繰り返し（省略可能）。/ の区切り文字はどのような文字でも可。 _n_ は省略すると `1` として扱う。
+
+|**.E** +
+**.E** file item
+| スクリーンエディタ起動 +
+READ.BUFFER file item のショートネーム
+
+|**.G**__n__ | _n_ 行目のコマンド履歴に移動。 _n_ は省略すると `1` として扱う。
+|**.K** | キーシーケンス確認モードに切り替え
+
+|**.L**__n__ _filter_ | コマンド履歴を現在位置から _n_ 件表示。 _n_ は省略すると画面行数分表示。
+filterは部分一致またはパターン一致させたい文字。
+
+|**.R**__s__ _e_ +
+**.R** _name_
+| コマンド履歴の _s_ ～ _e_ 行目を履歴の先頭に持ってくる。 _n_ は省略すると初めの履歴を複製する。 +
+VOCの _name_ が `PA` or `S` ならコマンド履歴の先頭に読み込む。 
+
+|**.S** _name_ _s_ _e_ | コマンド履歴の _s_ ～ _e_ を VOC に _name_ の PAragraph として保存する
+|**.T** | コマンドで時間計測機能をON/OFF
+|**.X**__n__ | _n_ 行目のコマンド履歴を実行。 _n_ は省略すると `1` として扱う。
+|**Q** | SISHシェルを抜ける 
+|===
 
 ==== スクリーンエディタ ====
 
-シェルにて以下のコマンドにて起動します。
+起動方法
 
-`.E [<File> [<Item> <FieldId...>]]`
+`Ctrl` + `E` or `.E` コマンド
+
+ファイルを指定して開く場合
+
+`READ.BUFFER [<File> [<Item> <FieldId...>]]`
 
 ****
 [horizontal]
@@ -110,33 +188,109 @@ http://ethanschoonover.com/solarized
 Conversion指定があれば保存時に自動的に変換されます。マルチバリューの場合はマルチバリュー編集モードになります。
 ****
 
-デフォルトのキー操作はWindowsの一般的なテキストエディタと同様です。
+デフォルトのキー操作はWindowsの一般的なテキストエディタにできるだけ合わせています。
 
-メモリが許す限り無制限にUndo/Redoできます。コマンドライン内でも同様に動作します。
+.バッファ
+マルチバッファ機能にて同時に複数のItemの編集状態を保持できます。  +
+`Ctrl` + `B` でバッファ一覧ポップアップが開きますので切り替えたいアイテムを選択してください。 + 
+バッファは明示的に閉じるまでセッションメモリ（COMMON）に格納され続けます。 +
+バッファ毎にUndo/Redoできます。コマンドラインも特殊なバッファとして実装されているのでUndo/Redo可能。
 
-マウスは使用することが出来ませんが、`Ctrl` を押しながらのキー移動や高機能なジャンプ機能によりキーボードによる効率的なカーソル移動が可能となっています。
+.カーソル移動
+マウスは使用することが出来ませんが、 `Ctrl` を押しながらのキー移動やジャンプ機能により
+キーボードによる効率的なカーソル移動が可能となっています。
 
-マルチバッファ機能にて同時に複数のItemを編集できます。 `Ctrl` + `B` でバッファ一覧ポップアップが開きますので切り替えたいアイテムを選択してください。 
+`Ctrl` + `O` でラベル一覧アウトライン表示::
+ラベルは実行コードには入らないのでGoToなどで使用しなくてもソースコード上に書いておけばアウトラインから
+簡単に目的の場所にジャンプすることができます。
 
-バッファは明示的に閉じるまでセッションメモリ（COMMON）に格納され続けます。
+`Ctrl` + `G` or `F12` で宣言元にジャンプ::
+実際は厳密な宣言元ではなくその単語が初めに出てきた場所にジャンプします。
 
-`ESC` キーで画面の下部にメニューが表示されます。メニューの内のテキストで大文字で表示されているキーを押すとそのメニューを選択できます。
+.BASICソース
+BASICプログラムは構文が装飾されて表示されます。 +
+分岐やループで自動的にインデントが増えます。
 
-`Ctrl` + `O` でラベル一覧ポップアップが表示されます。ラベルは実行コードには入らないのでGoToなどで使用しなくてもソースコード上に書いておけば簡単に目的の場所にジャンプすることができます。
+.マルチバリュー編集
+`F4` によりバリュー区切りを改行として編集できるバッファが開くので簡単にマルチバリューを編集する事が出来ます。 +
+保存すると結果は親バッファに反映されます。 +
+また、コマンドラインからフィールドを指定することによりマルチバリューをまとめて編集できます。
+フィールドの代わりにフレーズも可能ですのでアソシエーションをまとめて編集するのに便利です。
 
-BASICプログラムは構文が装飾されて表示されます。分岐やループで自動的にインデントが増えます。
+.メニュー
+`ESC` キーで画面の下部にメニューが表示されます。
+メニューの内のテキストで大文字で表示されているキーを押すとそのメニューを選択できます。
+
+.メニュー一覧
+[cols="1,3"]
+|===
+| ├ **B**uffer      | (バッファ操作関連サブメニュー)
+| │├ **S**howlist  | バッファ一覧表示
+| │├ **N**ew       | バッファ新規作成
+| │├ **R**ead      | 新規バッファにリード
+| │├ **W**rite     | バッファの内容を保存
+| │├ write**A**s   | バッファの内容を別なアイテムに保存
+| │├ r**E**load    | このバッファの内容をリロード
+| │├ **C**lose     | このバッファを閉じる
+| │├ **L**ock      | このバッファの対象アイテムを更新ロック
+| │├ **D**elete    | このバッファの対象アイテムを削除する
+| │└cl**O**se_all  | 全バッファを閉じる
+| ├ **E**dit        | (編集操作関連サブメニュー)  
+| │├ **U**ndo      | アンドゥ
+| │├ **R**edo      | リドゥ
+| │├ (**X**)cut    | カット
+| │├ **C**opy      | コピー
+| │├ **P**aste     | シェル内のクリップボードからペースト
+| │└ [paste from **L**ocal] | クライアント端末のクリップボードからペースト 
+| ├ **I**ns         | (挿入系サブメニュー)
+| │├ **C**omment   | コメント行を挿入
+| │├ **J**oin      | 選択範囲の行を指定文字で置換して１行にする
+| │├ **O**Conv     | 選択範囲をOConv出力結果に変換
+| │├ **I**Conv     | 選択範囲をIConv出力結果に変換
+| │├ **D**ate      | 現在日付の内部値を挿入 
+| │├ **T**ime      | 現在時刻の内部値を挿入
+| │├ **R**ecord    | 指定のItemの内容を挿入
+| ├ **C**ode        | (コード系サブメニュー)
+| │├ **B**uild     | 現在編集中のソースをコンパイルする
+| │├ **C**atalog   | 現在編集中のソースをカタログ化する
+| │├ **F**ormat    | 現在編集中のソースをFORMATコマンドでフォーマットする
+| │├ **M**ode      | (モード切替サブメニュー)
+| ││├ **B**asic   | BASIC編集モードにする
+| ││├ **P**aragraph | PHaragraph編集モードにする
+| ││├ **D**ata    | DATA編集モードにする
+| │├ **I**ndent    | (インデント設定変更サブメニュー)
+| ││├ **T**ab     | インデントにTABを利用する
+| ││├ **S**paces  | インデントにスペースを利用する
+| │└ **H**elp      | カーソル上の単語のヘルプを表示(UniVerseのみ)
+| ├ **N**avi        | (ナビゲーション系サブメニュー)
+| │├ **F**ind      | 検索
+| │├ **A**gain     | 前回の単語で次を検索
+| │├ re**V**erse   | 前回の単語で前を検索
+| │├ **R**eplace   | 置換
+| │├ go**L**ineno  | 指定行へ移動
+| │├ go**D**eclaration | 宣言元へ移動
+| │└ **O**utline   | アウトライン一覧表示
+| ├ **T**ools       | (ツール系サブメニュー)
+| │├ **T**heme     | テーマ切り替え
+| │└ **K**eys      | キーシーケンス確認モードに切り替え
+| ├ **M**ark        | (ブックマーク系サブメニュー)
+| │├ **S**et       | ブックマークを設定
+| │└ **G**o        | 設定したブックマークへ移動
+| ├ e**X**it        | エディタを終了してコマンドラインに戻る
+| └ **ESC**         | メニューを終了してエディタ操作へ戻る
+|===
 
 [NOTE]
 ===============================
-エディタ使用中にターミナルエミュレータのサイズを小さくすると表示が崩れます。その時は一度エディタを抜けてから戻ってきて下さい。 `Ctrl+E` `Ctrl+E`
+エディタ使用中にターミナルエミュレータのサイズを小さくすると表示が崩れます。 +
+その時は一度エディタを抜けてから戻ってきて下さい。 `Ctrl+E` ×２
 ===============================
 
 == キー別機能一覧 ==
 
-=== シェル/エディタ共通 ===
+=== コマンドライン/エディタ共通 ===
 
-==== カーソル操作 ====
-
+==== カーソル操作系 ====
 |===
 | キー| 機能
 
@@ -192,77 +346,63 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
                                   Ctrl+End
 
 
-==== 編集操作 ====
-
+==== 編集操作系 ====
 |===
 | キー| 機能
 
-| `Ctrl` + `Z` | 直前の編集操作を戻す(アンドゥ)
-| `Ctrl` + `Y` | 直前の編集操作を戻す(リドゥ)
+| `Ctrl` + `Z` | アンドゥ
+| `Ctrl` + `Y` | リドゥ
 | `Ctrl` + `X` | カット
 | `Ctrl` + `C` | コピー
-| `Ctrl` + `V` | クライアント端末のクリップボードから貼り付け
-| `Alt` + `V` | サーバローカルのクリップボードから貼り付け
+| `Ctrl` + `V` | クライアント端末のクリップボードからペースト
+| `Alt` + `V` | シェル内のクリップボードからペースト
 | `Ctrl` + `A` |  選択領域の拡張（押すたびに以下を繰り返します） +
 `選択なし` -> `単語選択` -> `空白文字まで選択` -> `1行選択` -> `同一インデント行を選択` -> `全行選択` -> `選択なし`
 |===
 
-==== その他操作 ====
-
+==== その他 ====
 |===
 | キー| 機能
 
-| `F11` | テーマ切り替え
-| `F1` | カーソル上の単語をヘルプ表示
+| `Insert` | 挿入モード/上書きモード切り替え
+| `F11`    | テーマ切り替え
+| `F1`     | カーソル上の単語をヘルプ表示(UniVerseのみ)
+| `ESC`    | いろいろな場面でキャンセル
 |===
 
-=== シェルのみ ===
+=== コマンドラインのみ ===
 
 |===
 | キー| 機能
 
 | `↑` | コマンド履歴戻る
 | `↓` | コマンド履歴進む
+| `Ctrl` + `HOME` | コマンド履歴の先頭へ移動
+| `Ctrl` + `END` |  コマンド履歴の末尾へ移動
 | `Ctrl` + `R` | コマンド履歴を古い方にインクリメンタルサーチ
 | `Ctrl` + `S` | コマンド履歴を新しい方にインクリメンタルサーチ
-| `Insert` | 大文字/小文字　反転入力の切り替え
-| `TAB` | 1回押下で共通部分の文字補完、２回押下で補完候補をリスト表示
+| `TAB` | 1回押下で共通部分の文字補完、２回押下で補完候補をリスト表示モード
 | `PgUp` | 補完候補リストのページ戻り
 | `PgDn` | 補完候補リストのページ送り
+| `F3` | 候補リストの部分一致フィルタ入力
 | `Ctrl` + `T` | 直前のコマンドのファイル名を挿入
-| `Ctrl` + `E` | エディタ画面に遷移
+| `Ctrl` + `E` | スクリーンエディタ画面に切り替え
 |===
 
 === エディタのみ ===
 
-`CHAR(27)`=(`ESC` or `Ctrl` + `[` or `Ctrl` + `3`) or `F10`でメニューを表示
-
-==== カーソル操作 ====
+`CHAR(27)` = ( `ESC` or `Ctrl` + `[` or `Ctrl` + `3` ) or `F10` でメニューを表示
 
 |===
 | キー| 機能
 
-| `Ctrl` + `N` |カーソル行が画面の中央になるようにスクロールします|
-|===
-
-==== 編集 ====
-
-|===
-| キー| 機能
-
-| `TAB` | 選択領域のインデントを増やす
-| `Shift` + `TAB` | 選択領域のインデントを減らす
+| `Ctrl` + `N` | カーソル行が画面の中央になるようにスクロールします
+| `TAB` | `TAB` の挿入。選択中ならインデントを増やす
+| `Shift` + `TAB` | 選択中ならインデントを減らす
 | `Ctrl` + `5` | @VMの挿入
 | `Ctrl` + `4` | @SVMの挿入
 | `Ctrl` + `Del` | 行削除
 | `Ctrl` + `!` | 選択領域のコメント化/コメント化解除
-|===
-
-==== ジャンプ ====
-
-|===
-| キー| 機能
-
 | `Ctrl` + `F` | 単語検索
 | `F3` | 直前の単語検索をもう一度実行
 | `Ctrl` + `F3` | 直前の単語検索を逆戻りで実行
@@ -273,19 +413,13 @@ BASICプログラムは構文が装飾されて表示されます。分岐やル
 | `Ctrl` + `B` | バッファ一覧ポップアップ表示
 | `Alt` + `→` | ジャンプ履歴進む
 | `Alt` + `←` | ジャンプ履歴戻る
-|===
-
-==== ファイル ====
-
-|===
-| キー| 機能
-
-| `Ctrl+S` | 上書き保存
+| `Ctrl` + `S` | 上書き保存
 | `F5` | リロード
 | `Ctrl` + `F4` | Bufferを閉じる
 | `F7` | コンパイル
 | `F4` | 下位レベルにDive(カーソル行の内容を下位の区切りレベルの編集モードとして新しいバッファに開きます) +
 バリュー区切りが改行になるので簡単に編集できます。
+| `Ctrl` + `E` | コマンドライン画面に切り替え
 |===
 
 == 制限事項 ==
@@ -306,44 +440,76 @@ image:resources/Consolas.png[]
 
 == 更新履歴 ==
 
-=== 2016/08/16 0.9.2リリース ===
+=== 2016/10/19 - 0.10.0 ===
 
-* [BUG]辞書のレコードをコマンド指定してエディタで開けなかった問題を修正
-* [BUG]制御シーケンスのゴミが入りにくくする機能により日本語入力に影響が出ていたので修正しました。
+.コマンドライン
+- `[NEW]` Saved List系コマンドでファイル省略での補完に対応
+- `[NEW]` 補完キーワード検索時に大文字小文字を区別しないようにした
+- `[NEW]` 補完候補の表示方法を変更
+- `[NEW]` 拡張ファイル指定の補完に対応
+- `[NEW]` OSファイルの補完に対応
+- `[NEW]` 履歴のインクリメンタルサーチ起動時にカーソルまでのコマンドラインを初期値とした
+- `[NEW]` コマンドスタックの最大件数を999に拡張
+- `[NEW]` コマンド履歴のストレージ保存に対応
+- `[NEW]` .R .G 内部コマンド追加　.X を範囲指定して実行できるようにした
+- `[Bug]` 空文字への置換が出来ない問題を修正
 
-=== 2016/08/16 0.9.1リリース ===
+.エディタ
+- `[NEW]` メニューからモードを切り替えれるようにした
+- `[NEW]` エディタメニューからインデント設定を変更できるようにした
+- `[Bug]` ALL置換時に同一行で初めの１つしか置き換わらない問題を修正
+- `[Bug]` 検索結果のカーソル位置が対応する括弧の場合に表示がわからない問題を修正
 
-- シェル機能
-    - [NEW]初回起動時にバージョンを表示するようにした
-	- [BUG]空コマンドを実行した時に`SI`が残る問題を修正
-	- [BUG]テーマ切り替えが初回時に変わらない問題を修正
+.その他
+- `[NEW]` 挿入モード/上書きモードの切り替え機能の追加。それに伴い大文字小文字反転の切り替えは `F9` に変更
+- `[Bug]` IMEなどの連続文字列が入力されない問題を修正
 
-=== 2016/07/07 0.9.0リリース ===
+=== 2016/09/02 - 0.9.2 ===
 
-- シェル機能
-	- L-Typeの辞書フィールド補完に対応
-	- Basic系コマンド利用時にBPを省略するとBP.OUTの内容を補完するようになりました。
-	- Ctrl+Rでのコマンド履歴のインクリメンタルサーチが出来るようになりました。
+.エディタ
+- `[Bug]` 0.9.0に修正により辞書のレコードをコマンド指定してエディタで開けなくなっていた問題を修正
 
-- エディタ機能
-	- ITEM編集時にカーソル上のフィールドでF4キーを押すとマルチバリューを１行として編集するモードに移行する機能を追加
-	- エディタ起動のコマンドラインにてフィールドを指定することで辞書駆動編集に対応
-		- マルチバリューの同一アソシエーションを指定する事で連動して編集することができます。
-		- Conversion等も自動的に変換されて保存されます。
-	- ステータスバーにカーソル上のキャラコードを表示
-	- 改行マークとタブを視認できるようにした
-	- Ctrl+Aで選択領域を拡張していく機能を追加
-	- 条件文やループ文の後に改行すると自動でインデントを設定するようにした
+.その他
+- `[Bug]` 制御シーケンスのゴミが入りにくくする機能により日本語入力に影響が出ていたので修正しました。
 
+=== 2016/08/16 - 0.9.1 ===
+
+.コマンドライン
+- `[NEW]` 初回起動時にバージョンを表示するようにした
+- `[Bug]` 空コマンドを実行した時に`SI`が残る問題を修正
+- `[Bug]` テーマ切り替えが初回時に変わらない問題を修正
+
+=== 2016/07/07 - 0.9.0 ===
+
+.コマンドライン
+- L-Typeの辞書フィールド補完に対応
+- Basic系コマンド利用時にBPを省略するとBP.OUTの内容を補完するようになりました。
+- Ctrl+Rでのコマンド履歴のインクリメンタルサーチが出来るようになりました。
+
+.エディタ
+- ITEM編集時にカーソル上のフィールドでF4キーを押すとマルチバリューを１行として編集するモードに移行する機能を追加
+- エディタ起動のコマンドラインにてフィールドを指定することで辞書駆動編集に対応
+  * マルチバリューの同一アソシエーションを指定する事で連動して編集することができます。
+  * Conversion等も自動的に変換されて保存されます。
+- ステータスバーにカーソル上のキャラコードを表示
+- 改行マークとタブを視認できるようにした
+- Ctrl+Aで選択領域を拡張していく機能を追加
+- 条件文やループ文の後に改行すると自動でインデントを設定するようにした
+
+.その他
 - キーシーケンスとカラーパレットの設定部分のソースを外だしにしました。
 
-=== 2014/09/10 0.8.0リリース ===
+=== 2014/09/10 - 0.8.0 ===
 
 - 初回リリース
 
 == TODO ==
 
+- 履歴の候補表示に対応する
+- 宣言元へジャンプの機能でインクルードにも対応する
 - エディタ内単語の入力補完機能
+- コマンドスタックをエディタで編集
+- 候補表示時のヘルプ表示でヘルプファイルがあればそちらを優先的に表示する
 
 == License ==
 
