マニュアル微調整

--- a/README.adoc
+++ b/README.adoc
@@ -4,27 +4,27 @@ Unix like Shell for OpenQM and UniVerse
 
 == 概要 ==
 
-Unix系のShellライクな操作でコマンドライン入力が出来るようになります。 
-また、アイテムやBASICソースを効率よく編集するスクリーンエディタも備えています。
+Unix系のShellに近い操作でコマンドライン入力が出来るようになります。 +
+また、データ(Item)やBASICソースを効率よく編集するスクリーンエディタも備えています。
 
 image:resources/Shell.png[Overview]
 
 == 特徴 ==
 
 .コマンドライン
-* VOCに登録されている単語の入力補完機能によりコマンドの入力ミスが減ります。
+* VOCに登録されている単語の入力補完機能によりミスが少なく迅速な入力が可能となります。
 * 一度入力したコマンドはコマンド履歴から検索する事が出来ます。
 * ターミナルサイズをウィンドウの大きさに自動的に合わせます。
-* 大文字小文字反転入力のON/OFFを　`F9` で簡単に切り替えれます。
+* 大文字小文字反転入力のON/OFFを `F9` で簡単に切り替えれます。
 * 実行時間計測モード
 
 .エディタ
 * BASICソースもデータレコードも同じ操作感で編集できます。
 * BASICソースの構文ハイライト表示により入力ミスが軽減されます。
 * カーソル移動の効率を高めるジャンプ機能 
-** アウトライン一覧を表示して指定ラベルにジャンプ
-** 変数宣言元にジャンプ
-** ジャンプ前のカーソル位置に戻る
+  ** アウトライン一覧を表示して指定ラベルにジャンプ
+  ** 変数宣言元にジャンプ
+  ** ジャンプ前のカーソル位置に戻る
 * マルチバリューを改行区切りで編集出来ます。
 * バッファ機能により複数ファイルの編集状態を維持できます。
 
@@ -425,7 +425,7 @@ BASICプログラムは構文が装飾されて表示されます。 +
 
 == 制限事項 ==
 
-- UniVerse版ではコマンド実行中にAbortすると `SISH` ごとAbortします。
+- UniVerse版ではコマンド実行中にAbortするとSISHごとAbortします。
 
 == おまけ ==
 
