単語入力補完機能で行の先頭で起動した場合に永久ループに入る問題を修正 -> 0.12.1

--- a/README.adoc
+++ b/README.adoc
@@ -446,6 +446,11 @@ image:resources/Consolas.png[]
 
 == 更新履歴 ==
 
+=== 2016/12/16 - 0.12.1 ===
+
+.エディタ
+- `[BUG]` 単語入力補完機能で行の先頭で起動した場合に永久ループに入る問題を修正
+
 === 2016/12/15 - 0.12.0 ===
 
 .エディタ
