メニューテーブルの表示調整

--- a/README.adoc
+++ b/README.adoc
@@ -242,7 +242,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 メニューの内のテキストで大文字で表示されているキーを押すとそのメニューを選択できます。
 
 .メニュー一覧
-[cols="1,3"]
+[cols="1,3",grid="none",caption=]
 |===
 | ├ **B**uffer      | (バッファ操作関連サブメニュー)
 | │├ **S**howlist  | バッファ一覧表示
@@ -254,7 +254,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 | │├ **C**lose     | このバッファを閉じる
 | │├ **L**ock      | このバッファの対象アイテムを更新ロック
 | │├ **D**elete    | このバッファの対象アイテムを削除する
-| │└cl**O**se_all  | 全バッファを閉じる
+| │└ cl**O**se_all | 全バッファを閉じる
 | ├ **E**dit        | (編集操作関連サブメニュー)
 | │├ **U**ndo      | アンドゥ
 | │├ **R**edo      | リドゥ
@@ -269,7 +269,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 | │├ **I**Conv     | 選択範囲をIConv出力結果に変換
 | │├ **D**ate      | 現在日付の内部値を挿入
 | │├ **T**ime      | 現在時刻の内部値を挿入
-| │├ **R**ecord    | 指定のItemの内容を挿入
+| │└ **R**ecord    | 指定のItemの内容を挿入
 | ├ **C**ode        | (コード系サブメニュー)
 | │├ **B**uild     | 現在編集中のソースをコンパイルする
 | │├ **C**atalog   | 現在編集中のソースをカタログ化する
@@ -278,10 +278,10 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 | │├ **M**ode      | (モード切替サブメニュー)
 | ││├ **B**asic   | BASIC編集モードにする
 | ││├ **P**aragraph | PHaragraph編集モードにする
-| ││├ **D**ata    | DATA編集モードにする
+| ││└ **D**ata    | DATA編集モードにする
 | │├ **I**ndent    | (インデント設定変更サブメニュー)
 | ││├ **T**ab     | インデントにTABを利用する
-| ││├ **S**paces  | インデントにスペースを利用する
+| ││└ **S**paces  | インデントにスペースを利用する
 | │└ **H**elp      | カーソル上の単語のヘルプを表示(UniVerseのみ)
 | ├ **N**avi        | (ナビゲーション系サブメニュー)
 | │├ **F**ind      | 検索
