copyrightとライセンス表記変更

--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ image:resources/Shell.png[Overview]
   ** 変数宣言元にジャンプ
   ** ジャンプ前のカーソル位置に戻る
 * マルチバリューを改行区切りで編集出来ます。
-* バッファ機能により複数ファイルの編集状態を維持できます。
+* マルチバッファ機能により複数ファイルの編集状態を維持できます。
 
 .その他
 * コマンドラインとエディタ共にカーソル移動やコピー＆ペーストはWindowsのキーバインドで操作できます。
@@ -306,6 +306,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 === コマンドライン/エディタ共通 ===
 
 ==== カーソル操作系 ====
+[cols="1,3"]
 |===
 | キー| 機能
 
@@ -313,17 +314,23 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 | kbd:[←] | 左移動
 | kbd:[↑] | 上移動
 | kbd:[↓] | 下移動
-| kbd:[Ctrl+→] |  次の単語に移動 +
-カーソルが単語の先頭にある場合は次の単語の先頭に移動 +
-カーソルが単語の先頭にない場合は単語区切りを認識して単語の終端に移動 +
-カーソルが対応する括弧上にある場合は対応する括弧まで移動 +
- +
-単語の区切りとは `aaa.bbb.ccc` `aaaBbbCcc` `aaa_bbb_ccc` 等です。
+| kbd:[Ctrl+→] 
+a| 次の単語に移動
 
-| kbd:[Ctrl+←] |  前の単語に移動 +
-カーソルが単語の先頭にある場合は前の単語の先頭に移動 +
-カーソルが単語の先頭にない場合は単語区切りを認識して単語の先頭に移動 +
-カーソルが対応する括弧上にある場合は対応する括弧まで移動
+* カーソルが単語の先頭にある場合は次の単語の先頭に移動
+* カーソルが単語の先頭にない場合は単語区切りを認識して単語の終端に移動
+* カーソルが対応する括弧上にある場合は対応する括弧まで移動
+
+NOTE: 単語の区切りは `.` `_` `@` `$` とキャメルケースです。 +
+例えば  `aaa.bbb.ccc` `aaaBbbCcc` 等です。
+
+| kbd:[Ctrl+←]
+a|  前の単語に移動
+
+* カーソルが単語の先頭にある場合は前の単語の先頭に移動
+* カーソルが単語の先頭にない場合は単語区切りを認識して単語の先頭に移動a
+* カーソルが対応する括弧上にある場合は対応する括弧まで移動
+
 | kbd:[Ctrl+↑] |  3行前に移動（先が非表示文字の場合は表示文字）
 | kbd:[Ctrl+↓] |  3行先に移動（先が非表示文字の場合は表示文字）
 | kbd:[HOME] |  論理行頭/物理行頭へ移動
@@ -369,6 +376,8 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 
 
 ==== 編集操作系 ====
+
+[cols="1,3"]
 |===
 | キー| 機能
 
@@ -386,6 +395,8 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 |===
 
 ==== その他 ====
+
+[cols="1,3"]
 |===
 | キー| 機能
 
@@ -397,6 +408,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 
 === コマンドラインのみ ===
 
+[cols="1,3"]
 |===
 | キー| 機能
 
@@ -418,6 +430,7 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 
 `CHAR(27)` = ( kbd:[ESC] or kbd:[Ctrl+ [ ] or kbd:[Ctrl+3] ) or kbd:[F10] でメニューを表示
 
+[cols="1,3"]
 |===
 | キー| 機能
 
@@ -466,7 +479,7 @@ image:resources/Consolas.png[]
 
 == 更新履歴 ==
 
-=== 2016/12/16 - 0.13.0 ===
+=== 2017/02/17 - 0.13.0 ===
 
 - `[NEW]` `.D` でコマンド履歴を削除できるようにした追加
 - `[Imp]` コマンドラインモードのペーストが Bracketed Paste Mode なら大小文字反転しないようにした。
@@ -579,4 +592,4 @@ image:resources/Consolas.png[]
 
 == License ==
 
-link:LICENSE[GPLv2]
+link:LICENSE[MIT]
