--- a/README.adoc
+++ b/README.adoc
@@ -447,13 +447,15 @@ a|  前の単語に移動
 | kbd:[Ctrl+F3] | 直前の単語検索を逆戻りで実行
 | kbd:[Ctrl+R] | 単語置換
 | kbd:[Ctrl+L] | 行番号指定ジャンプ
-| kbd:[Ctrl+G] or kbd:[F12] | 定義元へジャンプ
+| kbd:[Ctrl+G] +
+kbd:[F12] | 定義元へジャンプ
 | kbd:[Ctrl+O] | アウトライン(ラベル一覧)ポップアップ表示
 | kbd:[Ctrl+B] | バッファ一覧ポップアップ表示
 | kbd:[Alt+→] | ジャンプ履歴進む
 | kbd:[Alt+←] | ジャンプ履歴戻る
 | kbd:[Ctrl+S] | 上書き保存
-| kbd:[Ctrl+F4] | Bufferを閉じる
+| kbd:[Ctrl+W] +
+kbd:[Ctrl+F4] | バッファを閉じる
 | kbd:[F5] | リロード
 | kbd:[F7] | コンパイル
 | kbd:[F4] | 下位レベルにDive(カーソル行の内容を下位の区切りレベルの編集モードとして新しいバッファに開きます) +
