--- a/README.adoc
+++ b/README.adoc
@@ -35,14 +35,32 @@ image:resources/Shell.png[Overview]
 
 == 対象プラットフォーム ==
 
-* OpenQM 3.4系 or later (3.4-9で動作確認)
-* UniVerse 11.2系 or later (11.2.1でコンパイル確認)
+* OpenQM 3.4系 or later (3.4-10で動作確認) v0.14.0
+* UniVerse 11.2系 or later (11.2.1でコンパイル確認) v0.10.0
 
 == セットアップ ==
 
+ツールとターミナルエミュレータの環境を両方合わせないと動作しないので、
+導入は複雑になってしまっています。
+
+=== SISHのコンパイルとグローバルカタログ化 ===
+
+同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。
+`BP` ディレクトリのファイルエンコーディングと改行コードは `UTF8` `CRLF` に設定して置く必要があります。
+
+以下のコマンドでどのアカウントからも `SISH` というコマンドで起動できます。
+
+    >BASIC BP SISH
+    >CATALOG BP SISH SISH
+
+`SISH.SETTING.H` を独自にカスタマイズした場合は別名でカタログ化するなどして、他の人とバッティング
+しないように適宜調節して下さい。
+
+`BP.OUT` にコンパイル済みバイナリもあります。
+
 === ターミナルエミュレータ（クライアント環境） ===
 
-`SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータから接続して使用される必要があります。
+`SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータを利用する必要があります。
 
 動作確認環境として link:https://mintty.github.io/[mintty] で正しく動作する事を確認しています。
 設定は同梱のlink:minttyrc[minttyrc]を利用して下さい。
@@ -64,19 +82,6 @@ Windows10 では Bash on Windows(WSL) の利用がおすすめです。link:http
 
 これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]の
 キーシーケンスの設定とカラーパレット設定を端末側とうまく合わせてからコンパイルする必要があるかもしれません。
-
-=== SISHのコンパイルとグローバルカタログ化 ===
-
-同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。
-`BP` ディレクトリのファイルエンコーディングは `UTF8` に設定して置く必要があります。
-
-以下のコマンドでどのアカウントからも `SISH` というコマンドで起動できます。
-
-    >BASIC BP SISH
-    >CATALOG BP SISH SISH
-
-`SISH.SETTING.H` を独自にカスタマイズした場合は別名でカタログ化するなどして、他の人とバッティング
-しないように適宜調節して下さい。
 
 === Linuxに接続時の注意点 ===
 
@@ -218,7 +223,7 @@ kbd:[Ctrl+O] でラベル一覧アウトライン表示::
 
 kbd:[Ctrl+G] or kbd:[Ctrl+F12] で宣言元にジャンプ::
 - 変数や定数（実際は厳密な宣言元ではなくその単語が初めに出てきた場所にジャンプします）
-- `GoSub` や`GoTo` でのラベルやローカルサブルーチン
+- `GoSub` や `GoTo` でのラベルやローカルサブルーチン
 - `Call` では同一ファイル内にあるファイル
 - `$INCLUDE` 行ではインクルード先のファイル
 
@@ -480,6 +485,14 @@ image:resources/Consolas.png[]
 導入方法は少しややこしいですが、MSゴシックより見やすくなるのでとても捗ります。
 
 == 更新履歴 ==
+
+=== 2017/05/17 - 0.14.0 ===
+
+- `[BUG]` LOGTOのアカウント補完の初回に候補が０件だった場合に無限ループに陥る問題を修正
+- `[BUG]` .Xの範囲指定がうまく動作しない問題を修正
+- `[Imp]` 候補表示のVerbヘルプ表示時にTABをSpece2に変換するようにした。
+- `[Imp]` .minttyrcを標準的な状態にした。
+- `[Imp]` コンパイル済みバイナリも配布するようにした。
 
 === 2017/02/17 - 0.13.0 ===
 
