--- a/README.adoc
+++ b/README.adoc
@@ -13,11 +13,12 @@ image:resources/Shell.png[Overview]
 == 特徴 ==
 
 .コマンドライン
-* VOCに登録されている単語の入力補完機能によりミスが少なく迅速な入力が可能となります。
-* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。
-* ターミナルサイズを取得して自動的に `TERM` コマンドを実行する機能。
-* 大文字小文字反転入力のON/OFFを kbd:[F9] で簡単に切り替えれます。
-* 実行時間計測モード
+* VOCに登録されている単語の入力補完機能によりミスが少なく迅速な入力が可能となります。 +
+(VOCと入力補完の相性はとても良いです)
+* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。 kbd:[Ctrl+R]
+* ターミナルサイズを取得して自動的に `TERM` コマンドを実行する機能。 kbd:[F8]
+* 大文字小文字反転入力のON/OFF切り替え。 kbd:[F9]
+* 実行時間計測モード `.T`
 
 .エディタ
 * BASICソースもデータレコードも同じ操作感で編集できます。
@@ -35,72 +36,52 @@ image:resources/Shell.png[Overview]
 
 == 対象プラットフォーム ==
 
-* OpenQM 3.4系 or later (3.4-10で動作確認) v0.14.0
-* UniVerse 11.2系 or later (11.2.1でコンパイル確認) v0.10.0
+* OpenQM 3.4系 or later (3.4-10で動作確認しています)
+* UniVerse 11.2系 or later (11.2.1で簡単な動作確認しています)
 
 == セットアップ ==
 
-ツールとターミナルエミュレータの環境を両方合わせないと動作しないので、
-導入は複雑になってしまっています。
+コンパイル済みオブジェクトをダウンロードしてグローバルカタログすることで
+いつでも利用できるようになります。
 
-=== SISHのコンパイルとグローバルカタログ化 ===
+.OpenQM
 
-同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。
-`BP` ディレクトリのファイルエンコーディングと改行コードは `UTF8` `CRLF` に設定して置く必要があります。
+link:QM.BP.OUT/SISH[QM.BP.OUT/SISH] を 'gcat' フォルダに配置します。
 
-以下のコマンドでどのアカウントからも `SISH` というコマンドで起動できます。
+    cd /usr/qmsys/gcat
+    wget -N https://github.com/simount/SISH/raw/master/QM.BP.OUT/SISH
 
-    >BASIC BP SISH
-    >CATALOG BP SISH SISH
+.UniVerse
 
-`SISH.SETTING.H` を独自にカスタマイズした場合は別名でカタログ化するなどして、他の人とバッティング
-しないように適宜調節して下さい。
+link:UV.BP.O/SISH[UV.BP.O/SISH] を オブジェクトフォルダに配置します。
 
-`BP.OUT` にコンパイル済みバイナリもあります。
+    cd /usr/u2/uv/BP.O
+    wget -N https://github.com/simount/SISH/raw/master/UV.BP.O/SISH
 
-=== ターミナルエミュレータ（クライアント環境） ===
+以下のコマンドでグローバルカタログします
 
-`SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータを利用する必要があります。
+    LOGTO UV
+    CATALOG BP *SISH SISH
 
-動作確認環境として link:https://mintty.github.io/[mintty] で正しく動作する事を確認しています。
-設定は同梱のlink:minttyrc[minttyrc]を利用して下さい。
+.ターミナルエミュレータ（クライアント環境）のダウンロード
 
-minttyは link:https://cygwin.com/index.html[Cygwin]やlink:https://msys2.github.io/[MSYS2]から利用する事が出来ます。
-Windows10 では Bash on Windows(WSL) の利用がおすすめです。link:https://github.com/mintty/wsltty[wsltty]
+link:http://ice.hotmint.com/putty/[putty GDI] をダウンロードします。
 
-- Windows版DBへ接続するときはCygwinから `telnet -E localhost 4242` で接続
-- Linux版DBへ接続するときはCygwinからtelnet接続かssh接続でサーバに入ってから `qm` を起動
+同梱のlink:putty.ini[putty.ini]をputty.exeと同階層に配置します。
 
-また、他にも以下の端末で動作はしますが、細かい箇所が未確認です。
+NOTE: xtermの制御シーケンスを利用していますので、Windows標準のコンソールでは動作しません。 +
+他のターミナルエミュレータでもxtermの制御シーケンスが遅れれば、SISHの設定ファイルのシーケンスと
+合わせることで動作可能です。 +
+詳しくは、<<sec_customize>>を参照。
 
-- link:http://ice.hotmint.com/putty/[putty GDI] (Windows)
-  * 同梱のlink:putty.ini[putty.ini]をputty.exeと同階層に配置する事でデフォルト設定にて動作します。
-- link:https://help.gnome.org/users/gnome-terminal/stable/[GNOME Terminal](Linux)
-- link:https://www.iterm2.com/[iTurm2](Mac)
-  * プロファイル設定のKeysのプリセットを `xterm Defaults` に変更
-  * プロファイル設定のColorsのプリセットを `Solarized light` に変更
-
-これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]の
-キーシーケンスの設定とカラーパレット設定を端末側とうまく合わせてからコンパイルする必要があるかもしれません。
-
-=== Linuxに接続時の注意点 ===
-
-SISHでは kbd:[Ctrl+Z] と kbd:[Ctrl+S] をショートカットキーとして使用します。
-
-Linuxでは以下のターミナル制御コードと重複しているのでそれらの機能を利用する場合は、 `SISH.SETTING.H` で
-キーバインドを変更するか、以下の方法で抑制する必要があります。
-
-    stty stop undef
-    stty susp ^K
-
-=== 機能 ===
+== 機能 ==
 
 ==== コマンドライン入力時の単語補完入力機能 ====
 
 単語入力途中に `Tab` で下記の単語を補完、もう一度 `Tab` で候補リストを表示します。
 
 - VOC内の `Verb` , `File` , `PAragraph` , `Keyword` など
-- ファイル名が存在する場合にその辞書ファイルのフィールド
+- ファイル名が存在する場合にその辞書ファイルのフィールドID
 - フラットファイルの単語の次の単語の場合に限り、対象フラットファイルのレコードID
 - `,` 後のマルチパートファイル
 - `LOGTO` コマンドの後は登録アカウントテーブルの内容から補完
@@ -322,18 +303,21 @@ kbd:[Ctrl+ESC] キーで画面の下部にメニューが表示されます。
 | kbd:[Ctrl+→] 
 a| 次の単語に移動
 
-* カーソルが単語の先頭にある場合は次の単語の先頭に移動
-* カーソルが単語の先頭にない場合は単語区切りを認識して単語の終端に移動
-* カーソルが対応する括弧上にある場合は対応する括弧まで移動
+* カーソルが単語の先頭にある場合は次の単語の先頭に移動（高速移動）
+* カーソルが単語の先頭にない場合は単語区切りを認識して単語の終端に移動（低速移動）
 
 NOTE: 単語の区切りは `.` `_` `@` `$` とキャメルケースです。 +
-例えば  `aaa.bbb.ccc` `aaaBbbCcc` 等です。
+例えば  `aaa.bbb.ccc` `aaaBbbCcc` 等です。 +
+低速に切り替えたい単語にカーソルが来たら１回 kbd:[Ctrl] を離して単語の先頭から外れれば（低速移動）となります。
+
+* カーソルが対応する括弧上にある場合は対応する括弧まで移動
+
 
 | kbd:[Ctrl+←]
 a|  前の単語に移動
 
-* カーソルが単語の先頭にある場合は前の単語の先頭に移動
-* カーソルが単語の先頭にない場合は単語区切りを認識して単語の先頭に移動a
+* カーソルが単語の先頭にある場合は前の単語の先頭に移動（高速移動）
+* カーソルが単語の先頭にない場合は単語区切りを認識して単語の先頭に移動（低速移動）
 * カーソルが対応する括弧上にある場合は対応する括弧まで移動
 
 | kbd:[Ctrl+↑] |  3行前に移動（先が非表示文字の場合は表示文字）
@@ -392,7 +376,6 @@ a|  前の単語に移動
 | kbd:[Ctrl+C] | コピー
 | kbd:[Ctrl+V] | SISH内のクリップボードからペースト
 | kbd:[Alt+V] | クライアント端末のクリップボードからペースト(OSC52)
-| kbd:[Ctrl+Shift+V] | クライアント端末のクリップボードからペースト(minttyのキーバインド)
 | kbd:[Ctrl+K] | 行削除
 | kbd:[Ctrl+A] | 全行選択
 | kbd:[Ctrl+D] | 選択領域の拡張（押すたびに以下を繰り返します） +
@@ -472,6 +455,54 @@ kbd:[Ctrl+F4] | バッファを閉じる
 
 - UniVerse版ではコマンド実行中にAbortするとSISHごとAbortします。
 
+[[sec_customize]]
+== カスタマイズ ==
+
+=== SISHのコンパイルとグローバルカタログ化 ===
+
+同梱のソース `SISH` `SISH.SETTING.H` を `BP` ディレクトリに置きます。
+`BP` ディレクトリのファイルエンコーディングは `UTF8` `CRLF` に設定して下さい。
+
+以下のコマンドでどのアカウントからも `*SISH` というコマンドで起動できます。
+
+    >BASIC BP SISH
+    >CATALOG BP *SISH SISH
+
+`SISH.SETTING.H` を独自にカスタマイズした場合は別名でカタログ化するなどして、他の人とバッティング
+しないように適宜調節して下さい。
+
+=== ターミナルエミュレータ ===
+
+`SISH` はxterm系の制御シーケンスが理解できるターミナルエミュレータを利用する必要があります。
+
+- mintty
+minttyは link:https://cygwin.com/index.html[Cygwin]やlink:https://msys2.github.io/[MSYS2]から利用する事が出来ます。 +
+設定は同梱のlink:.minttyrc[.minttyrc]を利用して下さい。 +
+Windows10 では Bash on Windows(WSL)をminttyから利用できるlink:https://github.com/mintty/wsltty[wsltty]がおすすめです。
+Build 15063 からLinux版OpenQMが動作するようになりました。
+
+NOTE: Windows版DBへ接続するときはクライアントから `telnet -E localhost 4242` で接続(-Eを付ける必要あり)
+
+また、他にも以下の端末で動作はしますが、細かい箇所が未確認です。
+
+- link:https://help.gnome.org/users/gnome-terminal/stable/[GNOME Terminal](Linux)
+- link:https://www.iterm2.com/[iTurm2](Mac)
+  * プロファイル設定のKeysのプリセットを `xterm Defaults` に変更
+  * プロファイル設定のColorsのプリセットを `Solarized light` に変更
+
+これらの端末で正しく動作させる為には、同梱されているlink:BP/SISH.SETTING.H[SISH.SETTING.H]の
+キーシーケンスの設定とカラーパレット設定を端末側とうまく合わせてからコンパイルする必要があるかもしれません。
+
+=== Linuxに接続時の注意点 ===
+
+SISHでは kbd:[Ctrl+Z] と kbd:[Ctrl+S] をショートカットキーとして使用します。
+
+Linuxでは以下のターミナル制御コードと重複しているのでそれらの機能を利用する場合は、 `SISH.SETTING.H` で
+キーバインドを変更するか、以下の方法で抑制する必要があります。
+
+    stty stop undef
+    stty susp ^K
+
 == おまけ ==
 
 おすすめのフォント設定は Consolas + MeiryoKe_Console です。
@@ -484,7 +515,20 @@ image:resources/Consolas.png[]
 
 導入方法は少しややこしいですが、MSゴシックより見やすくなるのでとても捗ります。
 
+面倒がないダウンロードしてすぐに使える以下のフリーのフォントもおすすめです。
+
+https://myrica.estable.jp/
+
+
 == 更新履歴 ==
+
+=== 2017/05/23 - 0.15.0 ===
+
+- `[Imp]` フラットファイルが多すぎた場合に固まるのでファイルの中身は表示しないように仕様変更
+- `[Imp]` 単語区切りの認識に `{` `}` を追加
+- `[Imp]` 右側ポップアップウィンドウの選択色が見づらい問題を修正
+- `[Imp]` `PATH:` 拡張構文でファイル指定したときになるべく文字化けしないで開けるように `ENCODING "UTF8.A"` を指定するようにした
+- `[Imp]` UVのコンパイル済みバイナリも配布するようにした。
 
 === 2017/05/17 - 0.14.0 ===
 
@@ -596,6 +640,7 @@ image:resources/Consolas.png[]
 
 == TODO ==
 
+- フルパス指定でファイルを開く(OPENPATH対応)
 - wordsの表示エリアをクリアしたい
 - コマンドスタックをエディタで編集
   - コマンド履歴もバッファの１つにしたい
