--- a/README.adoc
+++ b/README.adoc
@@ -31,6 +31,7 @@ image:resources/Shell.png[Overview]
 * マルチバッファ機能により複数ファイルの編集状態を維持できます。
 
 ==== その他
+* プロジェクタに移すときに kbd:[F12] １つで白背景モードに配色を切り替えます。
 * コマンドラインとエディタ共にカーソル移動やコピー＆ペーストはWindowsのキーバインドで操作できます。
 （設定ファイルにより自分好みにキーバインドに変更可能）
 
@@ -401,6 +402,7 @@ a|  前の単語に移動
 | kbd:[F11]    | テーマ切り替え
 | kbd:[F1]     | カーソル上の単語をヘルプ表示(UniVerseのみ)
 | kbd:[ESC]    | いろいろな場面でキャンセル
+| kbd:[Break] or kbd:[Ctro+\] | 強制終了(プログラム実行中だと kbd:[Ctro+C] と同じもの)
 |===
 
 === コマンドラインのみ ===
@@ -463,6 +465,7 @@ kbd:[Ctrl+F4] | バッファを閉じる
 == 制限事項 ==
 
 - UniVerse版ではコマンド実行中にAbortするとSISHごとAbortします。
+- カーソル移動等でエスケープ文字が離れたり壊れたりして送信されるとゴミがテキスト入力される事があります。
 
 [[sec_customize]]
 == カスタマイズ ==
@@ -530,6 +533,14 @@ https://myrica.estable.jp/
 
 
 == 更新履歴 ==
+
+=== 2017/06/22 - 0.16.0 ===
+
+- `[Imp]` ファイルパスが '\'(バックスラッシュ)で始まる場合にディレクトリ補完も合わせるように変更
+- `[Imp]` SISH内でのBreak key を @28(Ctrl+\ or Break)にした
+- `[Imp]` PA実行後に `CLEARPROMPT` を呼ぶようにした
+- `[Bug]` 改行コードが指定と違う場合に保存できなかった問題を修正
+- `[Bug]` 先頭行の単語で左単語移動をするとフリーズする問題を修正
 
 === 2017/05/23 - 0.15.0 ===
 
@@ -650,6 +661,7 @@ https://myrica.estable.jp/
 
 == TODO ==
 
+- パス補完の日本語対応と候補をカーソルで選択できるようにする
 - フルパス指定でファイルを開く(OPENPATH対応)
 - wordsの表示エリアをクリアしたい
 - コマンドスタックをエディタで編集
