--- a/README.adoc
+++ b/README.adoc
@@ -465,7 +465,6 @@ kbd:[Ctrl+F4] | バッファを閉じる
 == 制限事項 ==
 
 - UniVerse版ではコマンド実行中にAbortするとSISHごとAbortします。
-- カーソル移動等でエスケープ文字が離れたり壊れたりして送信されるとゴミがテキスト入力される事があります。
 
 [[sec_customize]]
 == カスタマイズ ==
@@ -534,9 +533,14 @@ https://myrica.estable.jp/
 
 == 更新履歴 ==
 
+- `[Imp]` OSパス補完でマルチバイト文字(日本語)にも対応しました。
+- `[Imp]` オートコンプリート後にキー入力をクリアする事で誤入力しにくくした。
+- `[Imp]` QM での TERM TYPE を `XTERM-EEEPC` に変更。SISH想定端末でもSEDなどのカーソル操作が動作するようした。
+- `[Bug]` キー取得の方法をSEDと同じにしました。カーソル移動でゴミ文字が挿入されてしまう問題が解消された。
+
 === 2017/06/22 - 0.16.0 ===
 
-- `[Imp]` ファイルパスが '\'(バックスラッシュ)で始まる場合にディレクトリ補完も合わせるように変更
+- `[Imp]` ファイルパスが `\` (バックスラッシュ)で始まる場合にディレクトリ補完も合わせるように変更
 - `[Imp]` SISH内でのBreak key を @28(Ctrl+\ or Break)にした
 - `[Imp]` PA実行後に `CLEARPROMPT` を呼ぶようにした
 - `[Bug]` 改行コードが指定と違う場合に保存できなかった問題を修正
