--- a/README.adoc
+++ b/README.adoc
@@ -24,15 +24,15 @@ image:resources/Shell.png[Overview]
 * BASICソースもデータレコードも同じ操作感で編集できます。
 * BASICソースの構文ハイライト表示により入力ミスが軽減されます。
 * カーソル移動の効率を高めるジャンプ機能
-  ** アウトライン一覧を表示して指定ラベルにジャンプ
-  ** 変数宣言元にジャンプ
-  ** ジャンプ前のカーソル位置に戻る
+  ** アウトライン一覧を表示して指定ラベルにジャンプ kbd:[Ctrl+O]
+  ** 変数宣言元にジャンプ kbd:[Ctrl+G]
+  ** ジャンプ前のカーソル位置に戻る kbd:[Alt+←] kbd:[Alt+→]
 * マルチバリューを改行区切りで編集出来ます。
 * マルチバッファ機能により複数ファイルの編集状態を維持できます。
 
 ==== その他
 * プロジェクタに移すときに kbd:[F12] １つで白背景モードに配色を切り替えます。
-* コマンドラインとエディタ共にカーソル移動やコピー＆ペーストはWindowsのキーバインドで操作できます。
+* コマンドラインとエディタ共にカーソル移動や範囲選択によるコピー＆ペーストはWindowsのキーバインドで操作できます。
 （設定ファイルにより自分好みにキーバインドに変更可能）
 
 == 対象プラットフォーム ==
