--- a/README.adoc
+++ b/README.adoc
@@ -15,18 +15,18 @@ image:resources/Shell.png[Overview]
 ==== コマンドライン
 * VOCに登録されている単語の入力補完機能によりミスが少なく迅速な入力が可能となります。 +
 (VOCと入力補完の相性はとても良いです)
-* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。 kbd:[Ctrl+R]
-* ターミナルサイズを取得して自動的に `TERM` コマンドを実行する機能。 kbd:[F8]
-* 大文字小文字反転入力のON/OFF切り替え。 kbd:[F9]
+* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。 (kbd:[Ctrl+R])
+* ターミナルサイズを取得して自動的に `TERM` コマンドを実行する機能。 (kbd:[F8])　※ターミナルクライアント利用時のみ
+* 大文字小文字反転入力のON/OFF切り替え。 (kbd:[F9])
 * 実行時間計測モード `.T`
 
 ==== エディタ
 * BASICソースもデータレコードも同じ操作感で編集できます。
 * BASICソースの構文ハイライト表示により入力ミスが軽減されます。
 * カーソル移動の効率を高めるジャンプ機能
-  ** アウトライン一覧を表示して指定ラベルにジャンプ kbd:[Ctrl+O]
-  ** 変数宣言元にジャンプ kbd:[Ctrl+G]
-  ** ジャンプ前のカーソル位置に戻る kbd:[Alt+←] kbd:[Alt+→]
+  ** アウトライン一覧を表示して指定ラベルにジャンプ (kbd:[Ctrl+O])
+  ** 変数宣言元にジャンプ (kbd:[Ctrl+G])
+  ** ジャンプ前のカーソル位置に戻る (kbd:[Alt+←] , kbd:[Alt+→])
 * マルチバリューを改行区切りで編集出来ます。
 * マルチバッファ機能により複数ファイルの編集状態を維持できます。
 
