--- a/README.adoc
+++ b/README.adoc
@@ -138,7 +138,7 @@ http://ethanschoonover.com/solarized
 kbd:[F8] キーでターミナルクライアントのサイズを取得してサイズが違っていた場合に
 新しく取得したサイズで `TERM` コマンドを自動的に実行します。
 
-==== クリップボード共有（リモート接続のみ） ====
+==== クリップボード共有 ====
 
 コピー時にローカル端末のクリップボードに内容を送信します。(OSC52に対応している端末) +
 link:https://cirw.in/blog/bracketed-paste[Bracketed Paste Mode] に対応しています。
@@ -547,7 +547,12 @@ https://myrica.estable.jp/
 
 == 更新履歴 ==
 
-=== 2017/07/21 - 0.18.1 ===
+=== 2017/07/25 - 0.18.1 ===
+
+- `[Bug]` Windowsコンソールでカットとコピーがローカルのクリップボードに反映されるようにした
+- `[Bug]` Windowsコンソールでコマンドラインの文字入力の描画最適化
+
+=== 2017/07/24 - 0.18.1 ===
 
 - `[Bug]` Windowsコンソールで `F9` で大文字小文字切り替えできない問題を修正
 - `[Bug]` Windowsコンソールで `Ctrl+v` で貼り付けできない問題を修正（要AutoHotKey）
