--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ image:resources/Shell.png[Overview]
 ==== コマンドライン
 * VOCに登録されている単語の入力補完機能によりミスが少なく迅速な入力が可能となります。 +
 (VOCと入力補完の相性はとても良いです)
-* 一度入力したコマンドはコマンド履歴から検索する事が出来ます。 (kbd:[Ctrl+R])
+* 一度入力したコマンドはコマンド履歴からインクリメンタルサーチする事が出来ます。 (kbd:[Ctrl+R])
 * 大文字小文字反転入力のON/OFF切り替え。 (kbd:[F9])
 * 実行時間計測モード `.T`
 
@@ -547,7 +547,7 @@ https://myrica.estable.jp/
 
 == 更新履歴 ==
 
-=== 2017/07/25 - 0.18.1 ===
+=== 2017/07/25 - 0.18.2 ===
 
 - `[Bug]` Windowsコンソールでカットとコピーがローカルのクリップボードに反映されるようにした
 - `[Bug]` Windowsコンソールでコマンドラインの文字入力の描画最適化
