--- a/README.adoc
+++ b/README.adoc
@@ -453,7 +453,7 @@ a|  前の単語に移動
 |===
 | キー| 機能
 
-| kbd:[Ctrl+N] | カーソル行が画面の中央になるようにスクロールとあわせて現在のカーソル位置をジャンプ履歴に記録します
+| kbd:[Ctrl+B] | カーソル行が画面の中央になるようにスクロールとあわせて現在のカーソル位置をジャンプ履歴に記録します
 | kbd:[TAB] | `TAB` の挿入。選択中ならインデントを増やす
 | kbd:[Shift+TAB] | 選択中ならインデントを減らす
 | kbd:[Ctrl+SP] | 単語補完
@@ -468,7 +468,7 @@ a|  前の単語に移動
 | kbd:[Ctrl+G] +
 kbd:[F12] | 定義元へジャンプ
 | kbd:[Ctrl+O] | アウトライン(ラベル一覧)ポップアップ表示
-| kbd:[Ctrl+B] | バッファ一覧ポップアップ表示
+| kbd:[Ctrl+P] | バッファ一覧ポップアップ表示
 | kbd:[Alt+→] | ジャンプ履歴進む
 | kbd:[Alt+←] | ジャンプ履歴戻る
 | kbd:[Ctrl+S] | 上書き保存
